--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-autosanitizer": "^1.0.2",
+    "express-rate-limit": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
     "mongoose-unique-validator": "^2.0.3",
